Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.3.2:

* correct a corner case in python implementation of cpv comparison (just
  python, cpy extension handles it correctly); bug 188449 in gentoo, basically
  floats have a limited precision, thus it was possible to get truncation in
  comparison with specially crafted versions.

* handle EOF/IOError on raw_input (for --ask) a bit more gracefully, ticket
  108.

* cd to ${WORKDIR} if ${S} doesn't exist for test/install phases; matches
  change in portage behaviour.

* Now require snakeoil version 0.2 and up- require new capability of 
  AtomicWriteFile, ability to specify uid/gid/perms.  Via that, fixes ticket
  109 (umask leaking through to profile.env).

* the 'glsa' pkgset is now deprecated in favor of 'vuln'; will remain
  through till 0.4 (ticket #106).
 
* ticket 105/96; fix via andkit, basically a bug in einstall lead to
  extra einstall opts getting dropped instead of passed through.

* compatibility fix for lha unpacking for nwere versions of lha.

* emake now invokes ${MAKE:-make}, instead of make- undocumented ebuild
  req, see bug 186598 at bugs.gentoo.org.

* pmerge --verbose is now pmerge -F portage-verbose-formatter

* Stop installing pregen symlink; functionality moved to pmaint regen.

* 'pmerge --domain' was added; basically is a way to specify the domain to
  use, else usees the configuration defined default domain.


pkgcore 0.3.1:

* ticket 86; export FILE for portage_conf FETCHCOMMAND/RESUMECOMMAND support,
  convert from spawn_bash to spawn, add some extra error detection

* Correct cleanup of unknown state ebp processors; basically discard them if
  they fail in any way.  Cleanup inherit error msg when under ebd.

* Correct permission issue for vdb virtuals cache.

* ticket 84; rework overlay internals so that sorting order can't accidentally